--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,8 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.10",
     "serverless-http": "^2.7.0"
+  },
+  "devDependencies": {
+    "serverless-dotenv-plugin": "^3.12.2"
   }
 }
